_sass/styles.scss
// GLOBAL
a[href^="https://doi.org"], a[href^="https://cronfa.swan.ac.uk"] {
    overflow-wrap: break-word;
    word-wrap: break-word;
    -ms-word-break: break-all;
    word-break: break-all;
}

.text-monospace {
    font-family: monospace;
}

p:last-child, ol:last-child, ul:last-child {
    margin-bottom: 0;
}


// BACKGROUND
html {
    background-color: $html-bg;
}

body {
    background-color: $body-bg;
    background: $body-bg-img, $body-bg-gradient;
    background-attachment: fixed;
    direction: ltr;
    min-height: 100%;
    padding: $body-p;
}

aside {
    font-family: $aside-font-family;
	color: $aside-fg;
	
	a, a:hover {
		color: $aside-fg;
	}
				
	svg {
		fill: white;
		width: 1rem;
		margin-right: 1rem;
		@include auto-transition((opacity, margin), $transition-duration);
	}

	header {
		font-size: $header-font-size;
		font-weight: $aside-weight;
		line-height: $aside-line-height;
	
		a, a:hover, a:visited, a:active {
			color: $aside-fg;
		}
		
		svg {
		    @include auto-transition((transform), $transition-duration);
		}
		
		a[aria-expanded="true"] {
			svg {
				transform: rotate(0.25turn);
			}
		}
	}
	
	hr {
		background-color: $aside-fg;
		height: $aside-hr-h;
        opacity: 1;
        border-top: 0;
	}

	nav {
		color: black;
		font-family: $nav-font-family;
		font-size: $nav-font-size;
		opacity: 0;
		@include auto-transition((opacity), $transition-duration);
			
		& > div > div {
			background: #ffffffaa;
			-webkit-backdrop-filter: $frost-filter;
			backdrop-filter: $frost-filter;
			border-radius: var(--bs-border-radius-xxl) !important;
		
			ul {
				background: #ffffff;
				border-radius: var(--bs-border-radius-xl) !important;

				.nav-link {
					display: inline-block;	
					opacity: .75;
				
					svg {
						fill: black;
						width: .5rem;
						opacity: 0;
						margin-right: 1rem;
						@include auto-transition((opacity, margin), $transition-duration);
					}
				}

				.nav-link:hover, .nav-link.show {
					opacity: 1 !important;
				}
		
				.nav-link.active {
					opacity: 1 !important;
			
					& svg {
						opacity: 0
					}
				}
			}
		}

		&.show {
			opacity: 1;
		}
	}
	
	
	footer {
		font-family: $footer-font-family;
		opacity: .75;
	}
}

main {
	& > div { 
		background: #ffffffaa;
		-webkit-backdrop-filter: $frost-filter;
		backdrop-filter: $frost-filter;
		line-height: $main-line-spacing;
	
		article {
			background: #ffffff;
		}
	}	
}

// UTILITIES

.pdficon {
    display: block;
    width: $pdficon-w;
    height: $pdficon-h;
    background-repeat: no-repeat;
    opacity: $pdficon-o;
    @include auto-transition(opacity);

    &:hover {
        opacity: 1;
    }
}

.video-unactivated {
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

textarea {
    &[readonly="readonly"] {
        outline: none !important;
        resize: none;
    }
}

// DESKTOP

@include media-breakpoint-up(md) {
	aside {
		max-width: 25rem;
	
		header {
			font-size: $header-font-size-md;
		}

		nav {
			display: block !important;
			font-family: $nav-font-family-md;
			font-size: $nav-font-size-md;
			opacity: 1 !important;
			
			& > div > div {
				background: transparent;
				-webkit-backdrop-filter: initial;
				backdrop-filter: initial;
				border-radius: 0 !important;
		
				ul {
					background: transparent;
					border-radius: 0 !important;

					.nav-link, .nav-link:hover, .nav-link.active, .nav-link.show {
						color: #fff !important;
						
						svg {
							fill: white;
						}
					}

					.nav-link:hover, .nav-link.show {
						& svg {
							opacity: .75;
							margin-left: .25rem;
						}
					}
				}
			}
		}
	}
	
	main {
		margin-top: 12.65rem;
	}
}

// CONTENT FORMATTING
// article {
// 
// 	h1, h2, h3 {
// 		font-weight: bold;
// 	}
// 
//     p, h2, ol {
//         margin-bottom: $content-p-mb;
//     }
// 
// 
// blockquote {
//     margin: $blockquote-m;
// 
//     p {
//         padding: $blockquote-p;
//     }
// }
// 
// figure {
//     @include auto-transition((margin, max-width, width), $transition-duration);
//     margin-bottom: $content-p-mb;
// 
//     &.video {
//         & figcaption p {
//             margin: 0;
//         }
// 
//         iframe {
//             display: block;
//             width: 100%;
//         }
// 
//     }
// 
//     &:first-child {
//         margin-bottom: $spacer !important;
//         margin-top: 0 !important;
//     }
// 
// }
// 
// @include media-breakpoint-up(sm) {
//     figure.autosize {
//         cursor: zoom-in;
// 
//         & figcaption p {
//             display: -webkit-box;
//             -webkit-box-orient: vertical;
//             -webkit-line-clamp: $figcaption-p-max-lines;
//             overflow: hidden;
//         }
// 
//         figcaption svg.icon {
//             padding: $figcaption-icon-expand-p;
//             width: $figcaption-icon-expand-w;
//         }
// 
//         &:hover {
//             flex: 0 0 $figure-sm-hover-w;
//             width: $figure-sm-hover-w;
//         }
// 
//     }
// 
// }
// 
// @include media-breakpoint-up(lg) {
//     figure.autosize {
//         &:hover {
//             width: $figure-lg-hover-w;
//         }
// 
//     }
// 
// }
// 
// .footnotes ol {
//     margin: 0;
// }
// 
// a.reversefootnote {
//     text-decoration: none !important;
// }
// 
// article {
// 
// 	hr {
// 		border-top: 0;
// 		border-radius: $hr-border-radius;
// 		height: $hr-h !important;
// 		margin: $hr-my auto !important;
// 		opacity: 1;
// 		width: $hr-w;
// 	}
// 
// }
// 
// @include media-breakpoint-up(lg) {
// article {
//     hr {
//         margin: $hr-lg-my 0;
// 		width: $hr-w-lg;
//     }
//     }
// 
// }
// 
// /* Font fixes */
// 
// article {
// hr + h2, h2 + .h2, hr + h3, h2 + .h3 {
//     padding-top: 0 !important;
// }
// hr + h2 {
// 	margin-top: -.35rem;
// }
// }
// 
// 

// 
// }


// FOOTER

